har gjort så man ikke kan pille ved andres ønsker